[gd_scene load_steps=3 format=3 uid="uid://dn051ct866wlc"]

[ext_resource type="Script" uid="uid://bl4dy6vsgwrbf" path="res://scenes/scenes/battle_scene/battle_scene_visuals/2d/battle_character/battle_character.gd" id="1_oicxq"]
[ext_resource type="Texture2D" uid="uid://cr3lqoqc4rvr2" path="res://icon.svg" id="2_mdf3p"]

[node name="BattleCharacter" type="Node2D"]
script = ExtResource("1_oicxq")

[node name="SkinParent" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Sprite2D" type="Sprite2D" parent="SkinParent"]
scale = Vector2(0.3515625, 0.3515625)
texture = ExtResource("2_mdf3p")

[node name="NameLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.5
offset_top = 23.0
offset_right = 23.5
offset_bottom = 46.0
grow_horizontal = 2
text = "Name"
horizontal_alignment = 1
